--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "react": "^18.3.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.1.11"
   },
